--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 
     <title>Svelte app</title>
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="public/build/bundle.css" />
-
     <script defer src="public/build/bundle.js"></script>
   </head>
 
